# NetWatch

./: .gitignore  Cargo.toml  README.md  rules.toml
ebpf/: connect.bpf.c  exec.bpf.c
src/: api.rs  db.rs  dns.rs  feed_updater.rs  geoip.rs  main.rs  models.rs  process.rs  state.rs  threat.rs  threat_feed.rs  threatintel.rs  websocket.rs
src/ebpf/: events.rs  storage.rs
src/services/: broadcaster.rs
web/: index.html
