[package]
name = "netwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
libbpf-rs = "0.24"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
axum = { version = "0.8", features = ["ws"] }
tokio-stream = "0.1"
futures-util = "0.3"

