[package]
name = "netwatch"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow = "1"
libbpf-rs = "0.24"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }

axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }

futures-util = "0.3"
dns-lookup = "2"
maxminddb = "0.24"
